# shr

./: README
libframeworkd-glib/: AUTHORS  Makefile.am  configure.ac  libframeworkd-glib.pc.in
libframeworkd-glib/src/: Makefile.am  dialer-marshal.list  frameworkd-glib-call.c  frameworkd-glib-call.h  frameworkd-glib-dbus.c  frameworkd-glib-dbus.h  frameworkd-glib-device.c  frameworkd-glib-device.h  frameworkd-glib-network.c  frameworkd-glib-network.h  frameworkd-glib-sim.c  frameworkd-glib-sim.h  frameworkd-glib-sms.c  frameworkd-glib-sms.h
libframeworkd-glib/src/dbus/: call.h  call.xml  device.xml  sim.h  sim.xml  sms.h  sms.xml
libframeworkd-glib/src/frameworkd-glib/: frameworkd-glib-call.h  frameworkd-glib-device.h  frameworkd-glib-network.c  frameworkd-glib-network.h  frameworkd-glib-phonegui.h  frameworkd-glib-sim.h
libframeworkd-phonegui/: AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac  libframeworkd-glib-phonegui-gtk.pc.in  libframeworkd-phonegui.pc.in
libframeworkd-phonegui-efl/: AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac  libframeworkd-phonegui-efl.pc.in
libframeworkd-phonegui-efl/data/: Makefile.am  call.edc  contacts.edc  contacts.edj  dial-pad.edc  dialer.edc  dialer.edj  dialog.edc  elm-resizing-label.edc  incoming-call.edc  incoming-call.edj  incoming-message.edc  incoming-message.edj  keypad.edc  message-receipt.edc  messages.edc  messages.edj  outgoing-call.edc  outgoing-call.edj  sim-auth.edc  sim-auth.edj  ussd.edc
libframeworkd-phonegui-efl/po/: Makevars  POTFILES.in  ar.po  ca.po  cs.po  da.po  de.po  es.po  fi.po  gl.po  it.po  nb.po  pl.po  pl_PL.po  ru.po  sv.po
libframeworkd-phonegui-efl/src/: Makefile.am  elm_keypad.c  elm_keypad.h  etk_tree_model_edje.c  frame.c  frame.h  kbd.c  kbd.h  phonegui-call.c  phonegui-call.h  phonegui-contacts.c  phonegui-contacts.h  phonegui-dialer.c  phonegui-dialer.h  phonegui-dialog.c  phonegui-dialog.h  phonegui-incoming-call.c  phonegui-incoming-call.h  phonegui-incoming-message.c  phonegui-incoming-message.h  phonegui-init.c  phonegui-init.h  phonegui-message-receipt.c  phonegui-message-receipt.h  phonegui-message.c  phonegui-message.h  phonegui-messages.c  phonegui-messages.h  phonegui-messages.loT  phonegui-outgoing-call.c  phonegui-outgoing-call.h  phonegui-sim-auth.c  phonegui-sim-auth.h  phonegui-ussd.c  phonegui-ussd.h  pipe.c  pipe.h  time-helper.c  time-helper.h
libframeworkd-phonegui-efl/src/ophonekitd/: ophonekit-glib-dbus.h
libframeworkd-phonegui-efl/src/util/: Makefile.am  async.c  async.h  helper.c  helper.h  instance.c  instance.h  pipe.c  pipe.h  view.c  view.h  window.c  window.h
libframeworkd-phonegui-efl/src/view/: call-active-view.c  call-common.c  call-common.h  call-dbus.c  call-dbus.h  call-incoming-view.c  contact-delete-view.c  contact-edit-view.c  dialer-view.c  (+14 more)
libframeworkd-phonegui-gtk/: Makefile.am  NEWS  configure.ac  libframeworkd-glib-phonegui-gtk.pc.in  libframeworkd-phonegui-gtk.pc.in
libframeworkd-phonegui-gtk/data/: Makefile.am
libframeworkd-phonegui-gtk/src/: Makefile.am  alsa-volume-control.c  alsa-volume-scale.c  alsa-volume-scale.h  contacts.c  dialer-panel.c  dialer-panel.h  dialer-textview.c  digit-button.c  frameworkd-phonegui.h  headset.c  history.c  init.c  keypad.c  moko-talking.c  notify.c  pin.c  pin.h  sound.c  talking.c  talking.h  tips.c  tips.h
libframeworkd-phonegui/data/: Makefile.am  frameworkd-phonegui.conf
libframeworkd-phonegui/m4/: expand.m4
libframeworkd-phonegui/src/: Makefile.am  frameworkd-phonegui-utility.c  frameworkd-phonegui-utility.h  frameworkd-phonegui.c  frameworkd-phonegui.h  frameworkd-phonegui.h.in  moko-pin.c
libhito/: Makefile.am  NEWS  autogen.sh  configure.ac  libhito.pc.in
libhito/po/: ChangeLog  LINGUAS  POTFILES.in  bg.po  da.po  es.po  gl.po  nb.po  pl.po  ru.po
libhito/src/: Makefile.am  Makefile.in  hito-category-group.c  hito-group-store.c  hito-no-category-group.c  hito-no-category-group.h  hito-vcard-util.c  test-widgets.c
openmoko-dialer3/: AUTHORS  Makefile.am  TODO  configure.ac
openmoko-dialer3/data/: Makefile.am  openmoko-dialer.desktop
openmoko-dialer3/libhito/: hito-all-group.c  hito-all-group.h  hito-contact-model-filter.c  hito-contact-store.c  hito-contact-store.h  hito-group-combo.c
openmoko-dialer3/src/: Makefile.am  dialer-main.c  dialer-main.h  dialer-phonegui.c  dialer-phonegui.h
openmoko-messages3/: configure.ac
openmoko-messages3/data/: Makefile.am  openmoko-messages.desktop
openmoko-messages3/libhito/: Makefile.am  hito-category-group.h  hito-contact-model-filter.h  hito-contact-preview.c  hito-contact-view.c  hito-group-combo.h  hito-group.h  hito-separator-group.h
openmoko-messages3/src/: Makefile.am  messages-main.c  messages-main.h  messages-phonegui.c  messages-phonegui.h  moko-progressbar-window.c  moko-progressbar-window.h  moko-save-number.c  sms-compose.c  sms-compose.h  sms-contacts.c  sms-main.c
ophonekitd/: AUTHORS  Makefile.am  configure.ac
ophonekitd/data/: 80ophonekitd  80phoneuid  etc-ophonekitd.conf  ophonekitd.conf  ophonekitd.init  phonelog-database.sql
ophonekitd/src/: Makefile.am  ophonekitd-dbus-common.h  ophonekitd-dbus-contact-cache.c  ophonekitd-dbus-contact-cache.h  ophonekitd-dbus-usage.c  ophonekitd-dbus-usage.h  ophonekitd-dbus.c  ophonekitd-dbus.h  ophonekitd-frameworkd.c  ophonekitd-globals.h  ophonekitd-main.c  ophonekitd-main.h  ophonekitd-phonegui.c  ophonekitd-phonegui.h  ophonekitd-phonelog.c  ophonekitd-phonelog.h
shr-contacts/src/: Makefile.am  contacts-main.c  contacts-main.h  contacts-phonegui.c  contacts-phonegui.h
shr-dialer/: AUTHORS  ChangeLog  Makefile.am  README  configure.ac
shr-dialer/data/: Makefile.am  openmoko-dialer.desktop  shr-dialer.desktop
shr-dialer/src/: Makefile.am  dialer-main.c  dialer-main.h  dialer-phonegui.c
shr-messages/: Makefile.am  configure.ac
shr-messages/data/: 0000-shr-messages.desktop  Makefile.am  openmoko-messages.desktop  shr-messages.desktop
shr-messages/src/: Makefile.am  messages-main.c  messages-main.h  messages-phonegui.c  test-notes.c
(+193 files in other folders)
