# get rid of that stupid cache mechanism
rm -f config.cache

AC_INIT(ophonekitd, 0.1, http://www.openmoko.org/)
AC_PREREQ(2.52)
AC_CONFIG_SRCDIR(configure.ac)
AC_ISC_POSIX

AM_INIT_AUTOMAKE(1.6 dist-bzip2)
AM_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_HEADER_STDC

PKG_CHECK_MODULES(FRAMEWORKD_GLIB, libframeworkd-glib)
PKG_CHECK_MODULES(DBUS_GLIB, dbus-glib-1)
PKG_CHECK_MODULES(FRAMEWORKD_PHONEGUI, libframeworkd-phonegui)

AC_SUBST(DBUS_GLIB_CFLAGS)
AC_SUBST(DBUS_GLIB_LIBS)
AC_SUBST(FRAMEWORKD_GLIB_CFLAGS)
AC_SUBST(FRAMEWORKD_GLIB_LIBS)
AC_SUBST(FRAMEWORKD_PHONEGUI_CFLAGS)
AC_SUBST(FRAMEWORKD_PHONEGUI_LIBS)

AC_OUTPUT([
Makefile
src/Makefile
])

