AC_PREREQ(2.53)
AC_INIT(shr-messages, 0.0, http://www.openedhand.com/)
AM_INIT_AUTOMAKE()
AC_CONFIG_SRCDIR(src/)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_GNU_SOURCE
AC_ISC_POSIX
AC_PROG_CC
AC_STDC_HEADERS
AC_PROG_LIBTOOL

PKG_CHECK_MODULES(DBUS, dbus-glib-1)

AC_SUBST(DBUS_CFLAGS)
AC_SUBST(DBUS_LDFLAGS)

AC_OUTPUT([
Makefile
src/Makefile
data/Makefile
])

