MAINTAINERCLEANFILES = Makefile.in


#
# desktop integration: .desktop file
#
desktopdir = $(datadir)/applications
dist_desktop_DATA = shr-dialer.desktop

#
# desktop integration: application icon
#
#appicondir = $(datadir)/pixmaps
#dist_appicon_DATA = shr-dialer.png

#
# gui configuration file
#
# install:
#	install -m 755 -d $(DESTDIR)/etc/openmoko-dialer
#	install -m 644 gui.conf $(DESTDIR)/etc/openmoko-dialer/gui.conf
